[gd_scene load_steps=39 format=3 uid="uid://ejsi5wc0vtv"]

[ext_resource type="Script" path="res://Scripts/Players/amber.gd" id="1_8tn5x"]
[ext_resource type="Texture2D" uid="uid://cxmbfmjebj2rj" path="res://Assets/Characters/Streets of Rage 2 - Blaze.png" id="2_nq2ud"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ew64w"]
size = Vector3(0.472412, 0.811401, 0.168747)

[sub_resource type="Animation" id="Animation_ixheh"]
resource_name = "Hit1"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, 10],
"method": &"player_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(285.336, 109.614, 54.5, 83.5), Rect2(339.762, 109.614, 77.5, 83.5)]
}

[sub_resource type="Animation" id="Animation_egnsu"]
resource_name = "Hit2"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, 10],
"method": &"player_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(190.534, 188.27, 48.5, 92)]
}

[sub_resource type="Animation" id="Animation_gg4xd"]
resource_name = "Hit3"
length = 0.6
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, 10],
"method": &"player_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(189.47, 365.576, 46.5, 95.5), Rect2(234.474, 365.576, 89.5, 95.5), Rect2(319.298, 365.576, 85.5, 95.5), Rect2(403.146, 365.576, 60, 95.5), Rect2(461.32, 365.576, 63, 95.5), Rect2(528.97, 365.576, 92, 95.5), Rect2(618.404, 365.576, 67.5, 95.5), Rect2(6.25, 460.574, 50, 82), Rect2(116.39, 18.93, 54, 84.5)]
}

[sub_resource type="Animation" id="Animation_3jcrw"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(139.876, 918.758, 58, 83), Rect2(117.098, 20.914, 54.5, 82.5)]
}

[sub_resource type="Animation" id="Animation_0byhj"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(5, 14, 56, 90), Rect2(62, 14, 56, 90), Rect2(117.52, 14, 56, 90), Rect2(62, 14, 56, 90), Rect2(5, 14, 56, 90)]
}

[sub_resource type="Animation" id="Animation_bm5d8"]
resource_name = "Kick"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1, 10],
"method": &"player_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(214.435, 656.19, 50.0086, 61.6773), Rect2(269.492, 660.205, 79.5971, 60.0103)]
}

[sub_resource type="Animation" id="Animation_l3l5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(5, 14, 56, 90)]
}

[sub_resource type="Animation" id="Animation_pfa3t"]
resource_name = "Walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(170.24, 14, 34, 90), Rect2(204.5, 14, 36.5, 90), Rect2(243.592, 14, 60.5, 90), Rect2(304.884, 14, 44, 90), Rect2(344.406, 14, 44.5, 90), Rect2(388.644, 14, 62, 90), Rect2(170.24, 14, 34, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuam8"]
_data = {
"Hit1": SubResource("Animation_ixheh"),
"Hit2": SubResource("Animation_egnsu"),
"Hit3": SubResource("Animation_gg4xd"),
"Hurt": SubResource("Animation_3jcrw"),
"Idle": SubResource("Animation_0byhj"),
"Kick": SubResource("Animation_bm5d8"),
"RESET": SubResource("Animation_l3l5p"),
"Walk": SubResource("Animation_pfa3t")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ndpxb"]
animation = &"Hit1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k7thc"]
animation = &"Hit2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_24say"]
animation = &"Hit3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n8gen"]
animation = &"Hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aqb1c"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uyj8x"]
animation = &"Kick"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l8hsp"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ss75b"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q3qxs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_moc3g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hhoc2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lggu0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vn47l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ad7sp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u6t2t"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m565v"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3aju4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g1jvw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2dep8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fvlky"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1kite"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d3u6a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e8k2b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rmw7i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3iri"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d6vqc"]
states/Hit1/node = SubResource("AnimationNodeAnimation_ndpxb")
states/Hit1/position = Vector2(295.44, 241.573)
states/Hit2/node = SubResource("AnimationNodeAnimation_k7thc")
states/Hit2/position = Vector2(417.06, 241.781)
states/Hit3/node = SubResource("AnimationNodeAnimation_24say")
states/Hit3/position = Vector2(540.07, 226.408)
states/Hurt/node = SubResource("AnimationNodeAnimation_n8gen")
states/Hurt/position = Vector2(467.46, -6.42742)
states/Idle/node = SubResource("AnimationNodeAnimation_aqb1c")
states/Idle/position = Vector2(274.18, 99.9588)
states/Kick/node = SubResource("AnimationNodeAnimation_uyj8x")
states/Kick/position = Vector2(575.72, 113.408)
states/Start/position = Vector2(97, 100)
states/Walk/node = SubResource("AnimationNodeAnimation_l8hsp")
states/Walk/position = Vector2(294.19, -36.4274)
transitions = ["Hit1", "Idle", SubResource("AnimationNodeStateMachineTransition_ss75b"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_q3qxs"), "Idle", "Hit1", SubResource("AnimationNodeStateMachineTransition_moc3g"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_hhoc2"), "Walk", "Hurt", SubResource("AnimationNodeStateMachineTransition_lggu0"), "Hit1", "Hit2", SubResource("AnimationNodeStateMachineTransition_vn47l"), "Hit2", "Hit3", SubResource("AnimationNodeStateMachineTransition_ad7sp"), "Hit3", "Idle", SubResource("AnimationNodeStateMachineTransition_u6t2t"), "Hit2", "Idle", SubResource("AnimationNodeStateMachineTransition_m565v"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_3aju4"), "Kick", "Idle", SubResource("AnimationNodeStateMachineTransition_g1jvw"), "Hit3", "Kick", SubResource("AnimationNodeStateMachineTransition_2dep8"), "Hit1", "Hurt", SubResource("AnimationNodeStateMachineTransition_fvlky"), "Hit2", "Hurt", SubResource("AnimationNodeStateMachineTransition_1kite"), "Hit3", "Hurt", SubResource("AnimationNodeStateMachineTransition_d3u6a"), "Kick", "Hurt", SubResource("AnimationNodeStateMachineTransition_e8k2b"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_rmw7i"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_t3iri")]
graph_offset = Vector2(156.765, -95.6775)

[node name="Amber" type="CharacterBody3D" groups=["Players"]]
collision_mask = 6
script = ExtResource("1_8tn5x")
speed = 2.6

[node name="Sprite3D" type="Sprite3D" parent="."]
flip_h = true
texture_filter = 2
texture = ExtResource("2_nq2ud")
region_enabled = true
region_rect = Rect2(5, 14, 56, 90)

[node name="JumpSprite" type="Sprite3D" parent="."]
visible = false
texture_filter = 2
texture = ExtResource("2_nq2ud")
region_enabled = true
region_rect = Rect2(502.734, 7.59, 45.5, 97.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00744629, -0.00201416, 0.00449351)
shape = SubResource("BoxShape3D_ew64w")

[node name="Attack" type="Marker3D" parent="."]

[node name="Spawn" type="Marker3D" parent="Attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.41625, 0.255369, 0.00658476)

[node name="CanHitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tuam8")
}
autoplay = "Idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_d6vqc")
anim_player = NodePath("../AnimationPlayer")
parameters/current_length = 0.8
parameters/current_position = 0.106457
parameters/current_delta = 0.00666667
parameters/End/current_length = null
parameters/End/current_position = null
parameters/End/current_delta = null
parameters/Hit1/current_length = null
parameters/Hit1/current_position = null
parameters/Hit1/current_delta = null
parameters/Hit2/current_length = null
parameters/Hit2/current_position = null
parameters/Hit2/current_delta = null
parameters/Hit3/current_length = null
parameters/Hit3/current_position = null
parameters/Hit3/current_delta = null
parameters/Hurt/current_length = 0.2
parameters/Hurt/current_position = 0.2
parameters/Hurt/current_delta = 0.0
parameters/Idle/current_length = 0.8
parameters/Idle/current_position = 0.106457
parameters/Idle/current_delta = 0.00666667
parameters/Kick/current_length = null
parameters/Kick/current_position = null
parameters/Kick/current_delta = null
parameters/Start/current_length = 0.0
parameters/Start/current_position = 0.0
parameters/Start/current_delta = 0.0
parameters/Walk/current_length = 1.0
parameters/Walk/current_position = 0.741386
parameters/Walk/current_delta = 0.0459258

[connection signal="timeout" from="CanHitTimer" to="." method="_on_can_hit_timer_timeout"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_combo_timer_timeout"]
